[package]
name = "roguelike"
version = "0.1.0"
authors = ["Kinrany <kinrany@yandex.com>"]
edition = "2018"

[dependencies]
# More features: "collisions", "complex_shapes", "immi_ui", "sounds", gamepads
quicksilver = { version = "0.3.6", default-features = false, features = ["fonts", "saving"]}

[build-dependencies]
cargo-web = "0.6.23"
